--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           if (data.status === "success") {
             localStorage.setItem("namaPBS", data.namaPBS);
             localStorage.setItem("kodePBS", data.kodePBS);
-            window.location.href = "file:///C:/Users/1282902017/Documents/Project%20Reporting%20PBS/new%20or%20existing.html";
+            window.location.href = "new or existing.html";
           } else {
             document.getElementById("hasil").innerText = data.message;
           }
