--- a/new or existing.html
+++ b/new or existing.html
@@ -85,7 +85,7 @@
     }
 
     function handleEditStatus() {
-      window.location.href = "file:///C:/Users/1282902017/Documents/Project%20Reporting%20PBS/DVupdatestatus.htm";
+      window.location.href = "DVupdatestatus.htm";
     }
 
     function logout() {
