--- a/new or existing.html
+++ b/new or existing.html
@@ -85,7 +85,7 @@
     }
 
     function handleEditStatus() {
-      window.location.href = "DVupdatestatus.htm";
+      window.location.href = "DVupdatestatus.html";
     }
 
     function logout() {
